[Gepardec/mega#727] refactor status code and add receipt service tests